-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.2, 6.9.0 Beta2
-
None
-
Using Meta XR simulator on Windows
-
-
1ffb473f4 (dev), 10549ca48 (6.9), a1e9b2f81 (6.8)
XR application using PointLight with castsShadows property set to true crashes on vulkan. Doesn't happen on 6.8.1.
To reproduce add following PointLight to any XR example
PointLight { id: light2 color: "white" ambientColor: Qt.rgba(0.1, 0.1, 0.1, 1.0) position: Qt.vector3d(0, 200, 0) shadowMapFar: 2000 shadowMapQuality: Light.ShadowMapQualityHigh castsShadow: true brightness: 10 }
For Gerrit Dashboard: QTBUG-133367 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
624059,2 | Fix crash due to multiview rendering | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
624233,2 | Fix crash due to multiview rendering | 6.9 | qt/qtquick3d | Status: MERGED | +2 | 0 |
624350,2 | Fix crash due to multiview rendering | 6.8 | qt/qtquick3d | Status: MERGED | +2 | 0 |