Fix crash due to multiview rendering

Amends 64821f3552aa7f3826de945141f1e3c16f175bc1 where the view count
were adjusted to match the camera count was incorrectly removed, as
some of our internal pass will also use one single camera instead of the
multiview cameras.

Fixes: QTBUG-133367
Pick-to: 6.8
Change-Id: I039bbd49e63a2191f1cb96f5ce6b79434b050016
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>
(cherry picked from commit 1ffb473f49925b1cda93e9a902c4dc220c998be8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>