src/runtimerender/qssgrenderdefaultmaterialshadergenerator.cpp
@@ -2153,7 +2153,7 @@ void QSSGMaterialShaderGenerator::setRhiMaterialProperties(const QSSGRenderConte
     const QVector2D camProperties(inCameras[0]->clipNear, inCameras[0]->clipFar);
     shaders.setUniform(ubufData, "qt_cameraProperties", &camProperties, 2 * sizeof(float), &cui.cameraPropertiesIdx);
 
-    const int viewCount = inRenderProperties.layer.viewCount;
+    const int viewCount = inCameras.count();
     if (viewCount < 2) {
         const QVector3D camGlobalPos = inCameras[0]->getGlobalPos();
         shaders.setUniform(ubufData, "qt_cameraPosition", &camGlobalPos, 3 * sizeof(float), &cui.cameraPositionIdx);
